commit translated contents

--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
 ms.date: 04/29/2020
-ms.openlocfilehash: 67e3ee8219c600e214dbaeabab69d4ac6d1137b6
-ms.sourcegitcommit: 7370aa8203b6036cea1520021b5511d0fd994574
+ms.openlocfilehash: f9595eb779e72fe6262ee38fc61bf565c2485e53
+ms.sourcegitcommit: d9c7ac5d06735a01c1fafe34efe9486734841a72
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/02/2020
-ms.locfileid: "82728271"
+ms.lasthandoff: 05/06/2020
+ms.locfileid: "82859798"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -58,6 +58,14 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 ***
 
 [!INCLUDE[Static files: CSV content type changed to standards-compliant](~/includes/core-changes/aspnetcore/5.0/static-files-csv-content-type-changed.md)]
+
+***
+
+## <a name="core-net-libraries"></a>Principali librerie .NET
+
+- [I metodi CompareGreaterThan SSE e SSE2 gestiscono correttamente gli input NaN](#sse-and-sse2-comparegreaterthan-methods-properly-handle-nan-inputs)
+
+[!INCLUDE [sse-comparegreaterthan-intrinsics](../../../includes/core-changes/corefx/5.0/sse-comparegreaterthan-intrinsics.md)]
 
 ***
 
