commit translated contents

--- a/docs/csharp/misc/cs0437.md
+++ b/docs/csharp/misc/cs0437.md
@@ -6,17 +6,17 @@ f1_keywords:
 helpviewer_keywords:
 - CS0437
 ms.assetid: cba5c9b6-a0bc-4f19-b1f0-c1f66436ee91
-ms.openlocfilehash: c9071264d728e185b313c4c703d3c185a5b4c5c3
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: a3e9c863925ae8bc306ac58ceff87699ee08da17
+ms.sourcegitcommit: 9a4488a3625866335e83a20da5e9c5286b1f034c
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/12/2020
-ms.locfileid: "79172847"
+ms.lasthandoff: 05/15/2020
+ms.locfileid: "83419161"
 ---
 # <a name="compiler-warning-level-2-cs0437"></a>Avviso del compilatore (livello 2) CS0437
 Il tipo 'type' in 'assembly2' è in conflitto con lo spazio dei nomi importato 'namespace' in 'fassembly1'. Verrà usato il tipo definito in 'assembly'.  
   
- Questo avviso viene generato quando un tipo in un file di origine, file_2, è in conflitto con uno spazio dei nomi importato in file _1. Il compilatore usa il tipo nel file di origine.  
+ Questo avviso viene generato quando un tipo in un file di origine, file_2, è in conflitto con uno spazio dei nomi importato nel file_1. Il compilatore usa il tipo nel file di origine.  
   
 ## <a name="example"></a>Esempio  
   
