--- a/docs/csharp/misc/cs0436.md
+++ b/docs/csharp/misc/cs0436.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0436
 ms.assetid: c4135d9d-3511-4bbc-9540-48c2091f869c
-ms.openlocfilehash: 6b428cbd715277cbc1c5cd4c49c2d2b7e468cd54
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: 33530aa8cadad6853985a8e4b641b13e163f6b95
+ms.sourcegitcommit: 9a4488a3625866335e83a20da5e9c5286b1f034c
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/12/2020
-ms.locfileid: "79172860"
+ms.lasthandoff: 05/15/2020
+ms.locfileid: "83419200"
 ---
-# <a name="compiler-warning-level-2-cs0436"></a><span data-ttu-id="78143-102">Avviso del compilatore (livello 2) CS0436</span><span class="sxs-lookup"><span data-stu-id="78143-102">Compiler Warning (level 2) CS0436</span></span>
-<span data-ttu-id="78143-103">Il tipo 'type' in 'assembly' è in conflitto con il tipo importato 'type2' in 'assembly'.</span><span class="sxs-lookup"><span data-stu-id="78143-103">The type 'type' in 'assembly' conflicts with the imported type 'type2' in 'assembly'.</span></span> <span data-ttu-id="78143-104">Verrà usato il tipo definito in 'assembly'.</span><span class="sxs-lookup"><span data-stu-id="78143-104">Using the type defined in 'assembly'.</span></span>  
+# <a name="compiler-warning-level-2-cs0436"></a><span data-ttu-id="9d910-102">Avviso del compilatore (livello 2) CS0436</span><span class="sxs-lookup"><span data-stu-id="9d910-102">Compiler Warning (level 2) CS0436</span></span>
+<span data-ttu-id="9d910-103">Il tipo 'type' in 'assembly' è in conflitto con il tipo importato 'type2' in 'assembly'.</span><span class="sxs-lookup"><span data-stu-id="9d910-103">The type 'type' in 'assembly' conflicts with the imported type 'type2' in 'assembly'.</span></span> <span data-ttu-id="9d910-104">Verrà usato il tipo definito in 'assembly'.</span><span class="sxs-lookup"><span data-stu-id="9d910-104">Using the type defined in 'assembly'.</span></span>  
   
- <span data-ttu-id="78143-105">Questo avviso viene generato quando un tipo in un file di origine (file_2) è in conflitto con un tipo importato in file _1.</span><span class="sxs-lookup"><span data-stu-id="78143-105">This warning is issued when a type in a source file (file_2) conflicts with an imported type in file _1.</span></span> <span data-ttu-id="78143-106">Il compilatore usa il tipo del file di origine.</span><span class="sxs-lookup"><span data-stu-id="78143-106">The compiler uses the one in the source file.</span></span>  
+ <span data-ttu-id="9d910-105">Questo avviso viene generato quando un tipo in un file di origine (file_2) è in conflitto con un tipo importato in file_1.</span><span class="sxs-lookup"><span data-stu-id="9d910-105">This warning is issued when a type in a source file (file_2) conflicts with an imported type in file_1.</span></span> <span data-ttu-id="9d910-106">Il compilatore usa il tipo del file di origine.</span><span class="sxs-lookup"><span data-stu-id="9d910-106">The compiler uses the one in the source file.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="78143-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="78143-107">Example</span></span>  
+## <a name="example"></a><span data-ttu-id="9d910-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="9d910-107">Example</span></span>  
   
 ```csharp  
 // CS0436_a.cs  
@@ -30,8 +30,8 @@ public class A {
 }  
 ```  
   
-## <a name="example"></a><span data-ttu-id="78143-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="78143-108">Example</span></span>  
- <span data-ttu-id="78143-109">L'esempio seguente genera l'errore CS0436.</span><span class="sxs-lookup"><span data-stu-id="78143-109">The following example generates CS0436.</span></span>  
+## <a name="example"></a><span data-ttu-id="9d910-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="9d910-108">Example</span></span>  
+ <span data-ttu-id="9d910-109">L'esempio seguente genera l'errore CS0436.</span><span class="sxs-lookup"><span data-stu-id="9d910-109">The following example generates CS0436.</span></span>  
   
 ```csharp  
 // CS0436_b.cs  
