--- a/docs/csharp/misc/cs0437.md
+++ b/docs/csharp/misc/cs0437.md
@@ -6,19 +6,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS0437
 ms.assetid: cba5c9b6-a0bc-4f19-b1f0-c1f66436ee91
-ms.openlocfilehash: c9071264d728e185b313c4c703d3c185a5b4c5c3
-ms.sourcegitcommit: 7588136e355e10cbc2582f389c90c127363c02a5
+ms.openlocfilehash: a3e9c863925ae8bc306ac58ceff87699ee08da17
+ms.sourcegitcommit: 9a4488a3625866335e83a20da5e9c5286b1f034c
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/12/2020
-ms.locfileid: "79172847"
+ms.lasthandoff: 05/15/2020
+ms.locfileid: "83419161"
 ---
-# <a name="compiler-warning-level-2-cs0437"></a><span data-ttu-id="89220-102">Avviso del compilatore (livello 2) CS0437</span><span class="sxs-lookup"><span data-stu-id="89220-102">Compiler Warning (level 2) CS0437</span></span>
-<span data-ttu-id="89220-103">Il tipo 'type' in 'assembly2' è in conflitto con lo spazio dei nomi importato 'namespace' in 'fassembly1'.</span><span class="sxs-lookup"><span data-stu-id="89220-103">The type 'type' in 'assembly2' conflicts with the imported namespace 'namespace' in 'fassembly1'.</span></span> <span data-ttu-id="89220-104">Verrà usato il tipo definito in 'assembly'.</span><span class="sxs-lookup"><span data-stu-id="89220-104">Using the type defined in 'assembly'.</span></span>  
+# <a name="compiler-warning-level-2-cs0437"></a><span data-ttu-id="7ea71-102">Avviso del compilatore (livello 2) CS0437</span><span class="sxs-lookup"><span data-stu-id="7ea71-102">Compiler Warning (level 2) CS0437</span></span>
+<span data-ttu-id="7ea71-103">Il tipo 'type' in 'assembly2' è in conflitto con lo spazio dei nomi importato 'namespace' in 'fassembly1'.</span><span class="sxs-lookup"><span data-stu-id="7ea71-103">The type 'type' in 'assembly2' conflicts with the imported namespace 'namespace' in 'fassembly1'.</span></span> <span data-ttu-id="7ea71-104">Verrà usato il tipo definito in 'assembly'.</span><span class="sxs-lookup"><span data-stu-id="7ea71-104">Using the type defined in 'assembly'.</span></span>  
   
- <span data-ttu-id="89220-105">Questo avviso viene generato quando un tipo in un file di origine, file_2, è in conflitto con uno spazio dei nomi importato in file _1.</span><span class="sxs-lookup"><span data-stu-id="89220-105">This warning is issued when a type in a source file, file_2, conflicts with an imported namespace in file _1.</span></span> <span data-ttu-id="89220-106">Il compilatore usa il tipo nel file di origine.</span><span class="sxs-lookup"><span data-stu-id="89220-106">The compiler uses the type in the source file.</span></span>  
+ <span data-ttu-id="7ea71-105">Questo avviso viene generato quando un tipo in un file di origine, file_2, è in conflitto con uno spazio dei nomi importato nel file_1.</span><span class="sxs-lookup"><span data-stu-id="7ea71-105">This warning is issued when a type in a source file, file_2, conflicts with an imported namespace in file_1.</span></span> <span data-ttu-id="7ea71-106">Il compilatore usa il tipo nel file di origine.</span><span class="sxs-lookup"><span data-stu-id="7ea71-106">The compiler uses the type in the source file.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="89220-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="89220-107">Example</span></span>  
+## <a name="example"></a><span data-ttu-id="7ea71-107">Esempio</span><span class="sxs-lookup"><span data-stu-id="7ea71-107">Example</span></span>  
   
 ```csharp  
 // CS0437_a.cs  
@@ -33,8 +33,8 @@ namespace Util
 }  
 ```  
   
-## <a name="example"></a><span data-ttu-id="89220-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="89220-108">Example</span></span>  
- <span data-ttu-id="89220-109">L'esempio seguente genera l'errore CS0437.</span><span class="sxs-lookup"><span data-stu-id="89220-109">The following sample generates CS0437.</span></span>  
+## <a name="example"></a><span data-ttu-id="7ea71-108">Esempio</span><span class="sxs-lookup"><span data-stu-id="7ea71-108">Example</span></span>  
+ <span data-ttu-id="7ea71-109">L'esempio seguente genera l'errore CS0437.</span><span class="sxs-lookup"><span data-stu-id="7ea71-109">The following sample generates CS0437.</span></span>  
   
 ```csharp  
 // CS0437_b.cs  
