--- a/docs/core/compatibility/3.1-5.0.md
+++ b/docs/core/compatibility/3.1-5.0.md
@@ -2,12 +2,12 @@
 title: Modifiche di rilievo, dalla versione 3,1 alla 5,0
 description: Elenca le modifiche di rilievo dalla versione 3,1 alla versione 5,0 di .NET, ASP.NET Core e EF Core.
 ms.date: 04/29/2020
-ms.openlocfilehash: f9595eb779e72fe6262ee38fc61bf565c2485e53
-ms.sourcegitcommit: d9c7ac5d06735a01c1fafe34efe9486734841a72
+ms.openlocfilehash: c234638cc6ccf4444e86329492ec3855881ef9c8
+ms.sourcegitcommit: 0926684d8d34f4c6b5acce58d2193db093cb9cf2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/06/2020
-ms.locfileid: "82859798"
+ms.lasthandoff: 05/20/2020
+ms.locfileid: "83702448"
 ---
 # <a name="breaking-changes-for-migration-from-version-31-to-50"></a>Modifiche di rilievo per la migrazione dalla versione 3,1 alla 5,0
 
@@ -72,8 +72,13 @@ Se si esegue la migrazione dalla versione 3,1 di .NET Core, ASP.NET Core o EF Co
 ## <a name="globalization"></a>Globalizzazione
 
 - [StringInfo e TextElementEnumerator ora sono conformi a UAX29](#stringinfo-and-textelementenumerator-are-now-uax29-compliant)
+- [API di globalizzazione usare le librerie ICU in Windows](#globalization-apis-use-icu-libraries-on-windows)
 
 [!INCLUDE [uax29-compliant-grapheme-enumeration](../../../includes/core-changes/globalization/5.0/uax29-compliant-grapheme-enumeration.md)]
+
+***
+
+[!INCLUDE [icu-globalization-api](../../../includes/core-changes/globalization/5.0/icu-globalization-api.md)]
 
 ***
 
