commit translated contents

--- a/docs/visual-basic/misc/bc30257.md
+++ b/docs/visual-basic/misc/bc30257.md
@@ -1,5 +1,5 @@
 ---
-title: La classe<classname>'' non può ereditare da se stessa:<message>
+title: "Una classe '<classname>' non può ereditare da se stessa: <message>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30257
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30257
 ms.assetid: 03e3034c-a0fa-4619-84b9-5bc9aa0dfe80
-ms.openlocfilehash: db1843d13efcec3762ab7be91f366ba68f279835
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: e35a2b8ad22498d273bee963cba514420a5a5175
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69665406"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358945"
 ---
-# <a name="class-classname-cannot-inherit-from-itself-message"></a>La classe\<' nomeclasse >' non può ereditare \<da se stessa: Message >
-Un' [Inherits Statement](../../visual-basic/language-reference/statements/inherits-statement.md) nella definizione di una classe specifica la sua classe personale.  
+# <a name="class-classname-cannot-inherit-from-itself-message"></a>Una classe '\<classname>' non può ereditare da se stessa: \<message>
+Un' [Inherits Statement](../language-reference/statements/inherits-statement.md) nella definizione di una classe specifica la sua classe personale.  
   
  Una classe può ereditare da un'altra interfaccia, che le fornisce tutti i membri della classe dalla quale eredita, quindi non sarà necessario definire nuovamente tali membri. Una classe di questo tipo è detta *classe derivata*e la classe da cui eredita è detta *classe base*.  
   
