--- a/docs/visual-basic/misc/bc30337.md
+++ b/docs/visual-basic/misc/bc30337.md
@@ -1,5 +1,5 @@
 ---
-title: "'For' variabile di controllo del ciclo non può essere di tipo '<type>'"
+title: La variabile di controllo del ciclo ' for ' non può essere di tipo ' <type> '
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30337
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30337
 ms.assetid: 988bba15-e9a2-4045-98a0-7f53c8b2c3e3
-ms.openlocfilehash: fa824f4fa7c219f2ec22fb0d47d08d99727c7684
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: da7fbf982c4bb53444a96ea8f4ecf12843eedc9c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663791"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414142"
 ---
-# <a name="for-loop-control-variable-cannot-be-of-type-type"></a>'For' variabile di controllo del ciclo non può essere di tipo '\<tipo >'
+# <a name="for-loop-control-variable-cannot-be-of-type-type"></a>La variabile di controllo del ciclo ' for ' non può essere di tipo ' \<type> '
 Si è provato a usare una variabile di controllo del ciclo di tipo non valido. All'inizio di un ciclo `For` , il punto iniziale, il punto finale e il valore dell'incremento vengono valutati in ordine testuale. Tutte e tre le espressioni devono essere convertibili in modo implicito nel tipo della variabile. Se la variabile del ciclo `For` è di tipo `Object`, in fase di esecuzione almeno una delle espressioni deve essere di tipo numerico e a tutte e tre deve poter essere assegnato il tipo numerico più ampio.  
   
  **ID errore:** BC30337  
@@ -25,6 +25,6 @@ Si è provato a usare una variabile di controllo del ciclo di tipo non valido. A
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Per... Istruzione Next (Visual Basic)](../language-reference/statements/for-next-statement.md)
-- [Istruzione Do...Loop](../../visual-basic/language-reference/statements/do-loop-statement.md)
-- [Istruzione For...Next](../../visual-basic/language-reference/statements/for-next-statement.md)
+- [Istruzione For...Next (Visual Basic)](../language-reference/statements/for-next-statement.md)
+- [Istruzione Do...Loop](../language-reference/statements/do-loop-statement.md)
+- [Istruzione For...Next](../language-reference/statements/for-next-statement.md)
