--- a/docs/visual-basic/misc/bc30629.md
+++ b/docs/visual-basic/misc/bc30629.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30629
 ms.assetid: f4298ef7-85b1-4543-b764-4c3abda84baa
-ms.openlocfilehash: c8450b5de39958b7cbbfdeab4f292f9627e45e44
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 646a0c170404baf0eebda7326d664b6bd3e5a38e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646592"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415245"
 ---
 # <a name="structures-cannot-declare-a-non-shared-sub-new-with-no-parameters"></a>Le strutture non possono dichiarare un elemento 'Sub New' non condiviso senza parametri
 I costruttori`Sub New` dichiarati all'interno delle strutture devono accettare gli argomenti o essere dichiarati con il modificatore `Shared` .  
@@ -27,5 +27,5 @@ I costruttori`Sub New` dichiarati all'interno delle strutture devono accettare g
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Structure](../../visual-basic/language-reference/statements/structure-statement.md)
-- [Strutture](../../visual-basic/programming-guide/language-features/data-types/structures.md)
+- [Istruzione Structure](../language-reference/statements/structure-statement.md)
+- [Strutture](../programming-guide/language-features/data-types/structures.md)
