--- a/docs/visual-basic/misc/bc30943.md
+++ b/docs/visual-basic/misc/bc30943.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC30943
 ms.assetid: 0e3bff62-f187-4864-8520-70f6be22e869
-ms.openlocfilehash: 16e548d1c0794bdb2e201b17a9be2e827c59c1fb
-ms.sourcegitcommit: c7a7e1468bf0fa7f7065de951d60dfc8d5ba89f5
+ms.openlocfilehash: 846f631ef48b5b4148abd7aebb7cdc49eef502a6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 05/14/2019
-ms.locfileid: "65588765"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413973"
 ---
 # <a name="generic-methods-cannot-be-exposed-to-com"></a>I metodi generici non possono essere esposti a COM
-Un componente di .NET Framework che contiene uno o più routine generiche viene esportato in un componente COM.  
+Un componente .NET Framework contenente una o più routine generiche viene esportato in un componente COM.  
   
  Il modello COM (Component Object Model) non supporta tipi generici e non può interagire con essi.  
   
@@ -23,9 +23,9 @@ Un componente di .NET Framework che contiene uno o più routine generiche viene 
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-- Rimuovere il file o le routine generiche dal componente di .NET Framework oppure non usarlo per l'interoperabilità COM.  
+- Rimuovere la routine o le routine generiche dal componente .NET Framework oppure non usarle per l'interoperabilità COM.  
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Interoperabilità COM](../../visual-basic/programming-guide/com-interop/index.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Interoperabilità COM](../programming-guide/com-interop/index.md)
