--- a/docs/visual-basic/misc/bc31130.md
+++ b/docs/visual-basic/misc/bc31130.md
@@ -1,5 +1,5 @@
 ---
-title: Definizione di 'AddHandler' mancante per l'evento '<eventname>'
+title: Manca la definizione di ' AddHandler ' per l'evento ' <eventname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc31130
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC31130
 ms.assetid: cf6c7fd6-ce2e-4916-b427-2a4a63e7279d
-ms.openlocfilehash: e71e6fe99ac0d438f72d76f135c655297209459f
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 88d4cb16a2159af688cc59188bc8813609abf198
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61595465"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414751"
 ---
-# <a name="addhandler-definition-missing-for-event-eventname"></a>Definizione di 'AddHandler' mancante per l'evento '\<NomeEvento >'
+# <a name="addhandler-definition-missing-for-event-eventname"></a>Manca la definizione di ' AddHandler ' per l'evento ' \<eventname> '
 Se un evento viene dichiarato come `Custom`, deve fornire una routine per l'aggiunta di un gestore eventi.  
   
  **ID errore:** BC31130  
@@ -27,5 +27,5 @@ Se un evento viene dichiarato come `Custom`, deve fornire una routine per l'aggi
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione AddHandler](../../visual-basic/language-reference/statements/addhandler-statement.md)
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
