--- a/docs/visual-basic/misc/bc32070.md
+++ b/docs/visual-basic/misc/bc32070.md
@@ -1,5 +1,5 @@
 ---
-title: Membro '<membername>'definisce in modo implicito un membro'<implicitmembername>' che ha lo stesso nome di un parametro di tipo
+title: Un membro '<membername>' definisce in modo implicito un membro '<implicitmembername>' che ha lo stesso nome di un parametro di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - BC32070
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC32070
 ms.assetid: cc0b3fcf-c141-47e2-9b33-d2b91c8bf2d6
-ms.openlocfilehash: 794e1356d1c78956ef0e298df15143a63c590267
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: ea25bdc22f64293f64753a5cd1324514b813eb04
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64619063"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413817"
 ---
-# <a name="member-membername-implicitly-defines-a-member-implicitmembername-which-has-the-same-name-as-a-type-parameter"></a>Membro '\<nomeMembro >' definisce in modo implicito un membro '\<nomemembroimplicito >' che ha lo stesso nome di un parametro di tipo
+# <a name="member-membername-implicitly-defines-a-member-implicitmembername-which-has-the-same-name-as-a-type-parameter"></a>Un membro '\<membername>' definisce in modo implicito un membro '\<implicitmembername>' che ha lo stesso nome di un parametro di tipo
 Un membro di una classe generica genera un membro implicito con lo stesso nome di un parametro di tipo della classe.  
   
  Il compilatore Visual Basic crea membri impliciti corrispondenti a determinati elementi di programmazione dichiarati. La tabella seguente riepiloga questi membri impliciti o *sintetici*.  
   
 |Elemento dichiarato|Membri creati in modo implicito|  
 |----------------------|--------------------------------|  
-|Enumerazione|Membro`value__` |  
-|event|Routine`add_<eventname>` <br /><br /> Routine`remove_<eventname>` <br /><br /> Campo di`<eventname>Event` <br /><br /> Delegato`<eventname>EventHandler` |  
-|Proprietà|Routine`get_<propertyname>` <br /><br /> Routine`set_<propertyname>` |  
-|Variabile di una raccolta`My.` |Variabile`m_<variablename>` `Static` <br /><br /> Proprietà`<variablename>` <br /><br /> Routine`get_<variablename>` <br /><br /> Routine`set_<variablename>` |  
-|Variabile`WithEvents` |Variabile `_<variablename>`<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>` <br /><br /> Routine`set_<variablename>` |  
+|Enumerazione|Membro`value__`|  
+|Event|Routine`add_<eventname>`<br /><br /> Routine`remove_<eventname>`<br /><br /> Campo di`<eventname>Event`<br /><br /> Delegato`<eventname>EventHandler`|  
+|Proprietà|Routine`get_<propertyname>`<br /><br /> Routine`set_<propertyname>`|  
+|Variabile di una raccolta`My.`|`m_<variablename>``Static`variabile<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>`<br /><br /> Routine`set_<variablename>`|  
+|Variabile|Variabile<br /><br /> Proprietà `<variablename>`<br /><br /> Routine`get_<variablename>`<br /><br /> Routine`set_<variablename>`|  
   
  A causa della possibilità di conflitti di nomi, è consigliabile evitare di denominare gli elementi di programmazione dichiarati usando la stessa forma di qualsiasi membro implicito. Ad esempio, è consigliabile evitare qualsiasi nome di elemento che inizia con `get_` o `set_`.  
   
@@ -39,6 +39,6 @@ Un membro di una classe generica genera un membro implicito con lo stesso nome d
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nomi di elementi dichiarati](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Declared Element Names](../programming-guide/language-features/declared-elements/declared-element-names.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
