--- a/docs/visual-basic/misc/bc32077.md
+++ b/docs/visual-basic/misc/bc32077.md
@@ -1,5 +1,5 @@
 ---
-title: «<procedurename>'non è possibile eseguire l'override'<baseprocedurename>' perché si differenziano per i vincoli del parametro
+title: "' <procedurename> ' non può eseguire l'override <baseprocedurename> di '' perché si differenziano per vincoli di parametro di tipo"
 ms.date: 07/20/2015
 f1_keywords:
 - BC32077
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - BC32077
 ms.assetid: 9be1a88d-c1a4-4f12-8e72-74abb2be565d
-ms.openlocfilehash: 44a85cdcd1a495b2fd6d233bc542723bcf1c6b1e
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 0515d0a768f3e538f681f1c3dacb0dfca2013d09
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618694"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413758"
 ---
-# <a name="procedurename-cannot-override-baseprocedurename-because-they-differ-by-type-parameter-constraints"></a>«\<nomeroutine >' non è possibile eseguire l'override '\<nomeroutinebase >' perché si differenziano per i vincoli del parametro
+# <a name="procedurename-cannot-override-baseprocedurename-because-they-differ-by-type-parameter-constraints"></a>' \<procedurename> ' non può eseguire l'override \<baseprocedurename> di '' perché si differenziano per vincoli di parametro di tipo
 Una routine generica prova a eseguire l'override di una routine della classe base generica, ma contiene elenchi di vincoli diversi nei parametri di tipo.  
   
  Per eseguire l'override di una routine della classe base, la routine di override deve corrispondere non solo alla firma completa della routine della classe base, ma anche al livello di accesso della routine e al meccanismo di passaggio di ogni parametro.  
   
  Per eseguire l'override di una routine di classe base generica, la routine di override deve corrispondere anche al numero di parametri di tipo e all'elenco di vincoli di ciascuna di esse.  
   
- Per altre informazioni sui requisiti di override, vedere [Overrides](../../visual-basic/language-reference/modifiers/overrides.md).  
+ Per altre informazioni sui requisiti di override, vedere [Overrides](../language-reference/modifiers/overrides.md).  
   
  **ID errore:** BC32077  
   
@@ -33,4 +33,4 @@ Una routine generica prova a eseguire l'override di una routine della classe bas
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
