--- a/docs/visual-basic/misc/bc32086.md
+++ b/docs/visual-basic/misc/bc32086.md
@@ -1,5 +1,5 @@
 ---
-title: Tipo generico '<generictypename>' non è possibile importare più volte
+title: Impossibile importare più volte il tipo generico '<generictypename>'
 ms.date: 07/20/2015
 f1_keywords:
 - BC32086
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32086
 ms.assetid: d93bae4b-3224-4a6e-a072-8ce231084519
-ms.openlocfilehash: 6df3acec967b8218af85d31d903d2fb342645207
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 888deb900afb5e639a642d5d9561a5473f648419
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61783786"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358815"
 ---
-# <a name="generic-type-generictypename-cannot-be-imported-more-than-once"></a>Tipo generico '\<nometipogenerico >' non è possibile importare più volte
-Un' [istruzione Imports (tipo e .NET Namespace)](../../visual-basic/language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un tipo generico che è già stato importato con parametrizzazione di tipo diverso.  
+# <a name="generic-type-generictypename-cannot-be-imported-more-than-once"></a>Impossibile importare più volte il tipo generico '\<generictypename>'
+Un' [istruzione Imports (tipo e spazio dei nomi .NET)](../language-reference/statements/imports-statement-net-namespace-and-type.md) specifica un tipo generico che è già stato importato con parametrizzazione di tipo diverso.  
   
  È possibile dichiarare più tipi costruiti da un tipo generico perché la dichiarazione di un tipo costruito non ridefinisce il tipo generico. Tuttavia, più importazioni di un tipo generico equivalgono a diverse definizioni.  
   
@@ -29,4 +29,4 @@ Un' [istruzione Imports (tipo e .NET Namespace)](../../visual-basic/language-ref
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
