--- a/docs/visual-basic/misc/bc30256.md
+++ b/docs/visual-basic/misc/bc30256.md
@@ -1,5 +1,5 @@
 ---
-title: "<error>: '<classname1>'eredita da'<classname2>'"
+title: <error>:' <classname1> ' eredita da' <classname2> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30256
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30256
 ms.assetid: 170a12ee-87ef-4a49-8c84-ebf57fac435e
-ms.openlocfilehash: 0a545bb1c44cba7bca81c2680950c95b5db38a1c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 58cc94ea8b456c462679f6c0331007ce54dfacff
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64583617"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358958"
 ---
-# <a name="error-classname1-inherits-from-classname2"></a>\<errore >: '\<classname1 >' eredita da '\<classname2 >'
+# <a name="error-classname1-inherits-from-classname2"></a>\<error>:' \<classname1> ' eredita da' \<classname2> '
 È stata rilevata una gerarchia di ereditarietà circolare. Una classe viene designata come classe che eredita da se stessa o da un'altra classe che eredita direttamente o indirettamente da essa.  
   
  Questo messaggio può essere visualizzato più volte, per tracciare il percorso di ereditarietà circolare.  
@@ -27,4 +27,4 @@ ms.locfileid: "64583617"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
