--- a/docs/visual-basic/misc/bc30354.md
+++ b/docs/visual-basic/misc/bc30354.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30354
 ms.assetid: 8ce4ea75-6086-4d49-89c7-a04987ec7bee
-ms.openlocfilehash: 87e7ae594519599bdee278f652cca0d9a37bb29f
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a070905fbb8fb708bf45c8670ade9bbc6eef4571
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64663785"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414155"
 ---
 # <a name="interface-can-inherit-only-from-another-interface"></a>L'interfaccia può ereditare solo da un'altra interfaccia
 Si è provato a ereditare da un elemento che non è un'interfaccia.  
@@ -25,5 +25,5 @@ Si è provato a ereditare da un elemento che non è un'interfaccia.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
