--- a/docs/visual-basic/misc/bc30519.md
+++ b/docs/visual-basic/misc/bc30519.md
@@ -1,5 +1,5 @@
 ---
-title: "Non è riuscita perché la risoluzione dell'overload non accessibile '<method>' può essere chiamato senza una conversione di narrowing: <error>"
+title: "Risoluzione dell'overload non riuscita perché nessun '<method>' accessibile può essere chiamato senza una conversione verso un tipo di dati più piccolo: <error>"
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30519
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30519
 ms.assetid: 3b3e724d-6fad-4146-b47d-6525493b2fa8
-ms.openlocfilehash: 72ea1c8b4da2b7042e343c4c7641a8082b15cf49
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 1d87a15dafc6211a7473dec988a679d142e8e9e6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64644485"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358932"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-without-a-narrowing-conversion-error"></a>Non è riuscita perché la risoluzione dell'overload non accessibile '\<metodo >' può essere chiamato senza una conversione di narrowing: \<errore >
+# <a name="overload-resolution-failed-because-no-accessible-method-can-be-called-without-a-narrowing-conversion-error"></a>Risoluzione dell'overload non riuscita perché nessun '\<method>' accessibile può essere chiamato senza una conversione verso un tipo di dati più piccolo: \<error>
 È stata effettuata una chiamata a un metodo di overload, ma il compilatore non riesce a trovare un metodo che può essere chiamato senza una conversione verso un tipo di dati più piccolo. Una conversione verso un tipo di dati più piccolo imposta un valore su un tipo di dati che potrebbe non contenere esattamente alcuni dei possibili valori.  
   
  **ID errore:** BC30519  
@@ -25,6 +25,6 @@ ms.locfileid: "64644485"
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi e proprietà di overload](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
-- [Conversioni di ampliamento e restrizione](../../visual-basic/programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [Metodi e proprietà di overload](../programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [Widening and Narrowing Conversions](../programming-guide/language-features/data-types/widening-and-narrowing-conversions.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
