--- a/docs/visual-basic/misc/bc30640.md
+++ b/docs/visual-basic/misc/bc30640.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30640
 ms.assetid: 07e84ede-647a-4f8a-ac9a-8d242d20a862
-ms.openlocfilehash: dfba55af05a83a47876e18972a400a968c7c6dc1
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f2203e2d00e1cbd69d6ada5427397c73542de862
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646553"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415128"
 ---
 # <a name="option-explicit-can-be-followed-only-by-on-or-off"></a>'Option Explicit' può essere seguito solo da 'On' o 'Off'
 Le istruzioni`Option Explicit` devono specificare `On` o `Off`. Tutti gli altri valori non sono validi.  
@@ -25,4 +25,4 @@ Le istruzioni`Option Explicit` devono specificare `On` o `Off`. Tutti gli altri 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Option Explicit](../../visual-basic/language-reference/statements/option-explicit-statement.md)
+- [Istruzione Option Explicit](../language-reference/statements/option-explicit-statement.md)
