--- a/docs/visual-basic/misc/bc30650.md
+++ b/docs/visual-basic/misc/bc30650.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30650
 ms.assetid: 566aa501-d283-4c1f-b494-3bc5fbe80e04
-ms.openlocfilehash: 189f5bf07885b4ff247463468c58d1adcad0cd23
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 87132723c2bad0918fd8c0f13b8431056fe9e1aa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64646476"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84415050"
 ---
 # <a name="enums-must-be-declared-as-an-integral-type"></a>I valori Enum devono essere dichiarati come tipo integrale
 Gli unici tipi validi che è possibile usare nelle enumerazioni sono `SByte`, `Byte`, `Short`, `UShort`, `Integer`, `UInteger`, `Long`e `ULong`. Non è possibile usare altri tipi di dati.  
@@ -25,5 +25,5 @@ Gli unici tipi validi che è possibile usare nelle enumerazioni sono `SByte`, `B
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tipi di dati](../../visual-basic/language-reference/data-types/index.md)
-- [Istruzione Enum](../../visual-basic/language-reference/statements/enum-statement.md)
+- [Tipi di dati](../language-reference/data-types/index.md)
+- [Istruzione Enum](../language-reference/statements/enum-statement.md)
