--- a/docs/visual-basic/misc/bc30683.md
+++ b/docs/visual-basic/misc/bc30683.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30683
 ms.assetid: da619562-f39d-44fa-bed0-a3df02636fb0
-ms.openlocfilehash: 97feb09f3fba6041498b7a9de9be531fc9916790
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: bae1c4b5f35fcc96b545e16d3c205f48b8adfb4e
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664846"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414090"
 ---
 # <a name="inherits-statement-must-precede-all-declarations-in-a-class"></a>L'istruzione 'Inherits' deve precedere tutte le dichiarazioni in una classe
 Le istruzioni `Inherits` devono trovarsi all'inizio delle definizioni di classe.  
@@ -25,5 +25,5 @@ Le istruzioni `Inherits` devono trovarsi all'inizio delle definizioni di classe.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Inherits](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [Inherits Statement](../language-reference/statements/inherits-statement.md)
 - [Nozioni fondamentali sull'ereditarietà (Visual Basic)](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
