--- a/docs/visual-basic/misc/bc30688.md
+++ b/docs/visual-basic/misc/bc30688.md
@@ -1,5 +1,5 @@
 ---
-title: Gli eventi nelle interfacce non possono essere dichiarati '<implements>'
+title: Gli eventi nelle interfacce non possono essere dichiarati ' <implements> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc30688
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30688
 ms.assetid: 577823c1-815c-4f1c-9177-4bbf73fa92db
-ms.openlocfilehash: 280571377b80847ec985e2d2876c37321de28a48
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 50b3aabd148678ec4aba0479e4f9c00aec5be384
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61936565"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412754"
 ---
-# <a name="events-in-interfaces-cannot-be-declared-implements"></a>Gli eventi nelle interfacce non possono essere dichiarati '\<implementa >'
+# <a name="events-in-interfaces-cannot-be-declared-implements"></a>Gli eventi nelle interfacce non possono essere dichiarati ' \<implements> '
 Gli eventi dichiarati nelle interfacce non possono implementare gli eventi di altre interfacce.  
   
  **ID errore:** BC30688  
@@ -27,4 +27,4 @@ Gli eventi dichiarati nelle interfacce non possono implementare gli eventi di al
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Interface](../../visual-basic/language-reference/statements/interface-statement.md)
+- [Istruzione Interface](../language-reference/statements/interface-statement.md)
