--- a/docs/visual-basic/misc/bc30696.md
+++ b/docs/visual-basic/misc/bc30696.md
@@ -1,5 +1,5 @@
 ---
-title: «<membername1>'e'<membername2>' non è in rapporto di overload perché si differenziano solo per i tipi di parametri facoltativi
+title: "' <membername1> ' è <membername2> ' non possono essere in overload perché si differenziano solo per i tipi di parametri facoltativi"
 ms.date: 07/20/2015
 f1_keywords:
 - bc30696
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30696
 ms.assetid: 6693a493-959e-4ff3-8c2d-52ed2d597f77
-ms.openlocfilehash: 1b407a2dfb64b436df7f4d30810ea4e84c9f3331
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 7e27ac458d2e5671db7445f19219d6e6c05b2432
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64657947"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412702"
 ---
-# <a name="membername1-and-membername2-cannot-overload-each-other-because-they-differ-only-by-the-types-of-optional-parameters"></a>«\<membername1 >' e '\<membername2 >' non è in rapporto di overload perché si differenziano solo per i tipi di parametri facoltativi
+# <a name="membername1-and-membername2-cannot-overload-each-other-because-they-differ-only-by-the-types-of-optional-parameters"></a>' \<membername1> ' è \<membername2> ' non possono essere in overload perché si differenziano solo per i tipi di parametri facoltativi
 I membri di overload devono presentare tipi di dati diversi per uno o più parametri obbligatori.  
   
  **ID errore:** BC30696  
@@ -25,4 +25,4 @@ I membri di overload devono presentare tipi di dati diversi per uno o più param
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overload](../../visual-basic/language-reference/modifiers/overloads.md)
+- [Overload](../language-reference/modifiers/overloads.md)
