--- a/docs/visual-basic/misc/bc30705.md
+++ b/docs/visual-basic/misc/bc30705.md
@@ -1,5 +1,5 @@
 ---
-title: L'oggetto '<objectname>' a cui si fa riferimento ha valore ' Nothing '
+title: L'oggetto '<objectname>' a cui si fa riferimento ha valore 'Nothing'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30705
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30705
 ms.assetid: 7c14aec2-26ef-429f-8412-9f9ec74529cb
-ms.openlocfilehash: a34708e67650ab79033b108a7aabef3f2bb6e5c5
-ms.sourcegitcommit: 5a28f8eb071fcc09b045b0c4ae4b96898673192e
+ms.openlocfilehash: ed5acee191ba02d71bc2c89a1166101c4e07f46c
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 10/31/2019
-ms.locfileid: "73197991"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84412624"
 ---
-# <a name="referenced-object-objectname-has-a-value-of-nothing"></a>L'oggetto '\<ObjectName >' a cui viene fatto riferimento ha valore ' Nothing '
+# <a name="referenced-object-objectname-has-a-value-of-nothing"></a>L'oggetto '\<objectname>' a cui si fa riferimento ha valore 'Nothing'
 L'oggetto a cui si fa riferimento non è stato impostato o è stato impostato sul valore `Nothing`.  
   
  **ID errore:** BC30705  
@@ -25,5 +25,5 @@ L'oggetto a cui si fa riferimento non è stato impostato o è stato impostato su
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Nothing](../../visual-basic/language-reference/nothing.md)
+- [Nothing](../language-reference/nothing.md)
 - [Debug in Visual Studio](/visualstudio/debugger/debugger-feature-tour)
