--- a/docs/visual-basic/misc/bc30935.md
+++ b/docs/visual-basic/misc/bc30935.md
@@ -1,5 +1,5 @@
 ---
-title: "Non è possibile eseguire l'override del membro ' <classname>. <procedurename>' corrispondente a questa firma perché la classe ' <classname>' contiene più membri con lo stesso nome e la stessa firma: <signaturelist>"
+title: <classname> <procedurename> Non è possibile eseguire l'override del membro ' .' corrispondente a questa firma perché la classe ' <classname> ' contiene più membri con lo stesso nome e la stessa firma:<signaturelist>
 ms.date: 07/20/2015
 f1_keywords:
 - bc30935
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30935
 ms.assetid: 1165b630-668d-417d-9e18-9b8ffe7f6980
-ms.openlocfilehash: 44491d2816ab683a7e5b8c0e067a27de8780af51
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: dcb759705ab877771f6aca20d93590d5b933ce28
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352669"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414012"
 ---
-# <a name="member-classnameprocedurename-that-matches-this-signature-cannot-be-overridden-because-the-class-classname-contains-multiple-members-with-this-same-name-and-signature-signaturelist"></a>Non è possibile eseguire l'override del membro ' \<classname >. \<procedurename >' corrispondente a questa firma perché la classe ' \<classname >' contiene più membri con lo stesso nome e la stessa firma: \<signaturelist >
+# <a name="member-classnameprocedurename-that-matches-this-signature-cannot-be-overridden-because-the-class-classname-contains-multiple-members-with-this-same-name-and-signature-signaturelist"></a>\<classname> \<procedurename> Non è possibile eseguire l'override del membro ' .' corrispondente a questa firma perché la classe ' \<classname> ' contiene più membri con lo stesso nome e la stessa firma:\<signaturelist>
 Una routine o proprietà prova a eseguire l'override di una routine o proprietà ereditata, ma il compilatore rileva più di una versione di tale routine o proprietà di base con lo stesso nome e firma.  
   
  Questo errore può verificarsi in una situazione con tipi generici costruiti, come illustrano le seguenti dichiarazioni di struttura.  
@@ -47,6 +47,6 @@ End Class
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Overridable](../../visual-basic/language-reference/modifiers/overridable.md)
-- [Overrides](../../visual-basic/language-reference/modifiers/overrides.md)
+- [Overridable](../language-reference/modifiers/overridable.md)
+- [Override](../language-reference/modifiers/overrides.md)
 - [Override di proprietà e metodi nelle classi derivate](../programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)
