--- a/docs/visual-basic/misc/bc30939.md
+++ b/docs/visual-basic/misc/bc30939.md
@@ -1,5 +1,5 @@
 ---
-title: Espressione 'AddressOf' non può essere convertito in '<typename>' perché tipo '<typename>' è dichiarato 'come MustInherit' e non può essere creato
+title: Impossibile convertire l'espressione 'AddressOf' in '<typename>' perché il tipo '<typename>' è dichiarato come 'MustInherit' ed è impossibile crearlo
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30939
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC30939
 ms.assetid: e8edef15-0df5-46d7-aba6-89e26a2aa506
-ms.openlocfilehash: b6a3f6ee5aafb4b00cd70eb16917b8ba2f438333
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4dcb0e5f90115ac3d8d41e4a97da6b975341f7f8
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64621880"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413986"
 ---
-# <a name="addressof-expression-cannot-be-converted-to-typename-because-type-typename-is-declared-mustinherit-and-cannot-be-created"></a>Espressione 'AddressOf' non può essere convertito in '\<nomeTipo >' perché tipo '\<nomeTipo >' è dichiarato 'come MustInherit' e non può essere creato
+# <a name="addressof-expression-cannot-be-converted-to-typename-because-type-typename-is-declared-mustinherit-and-cannot-be-created"></a>Impossibile convertire l'espressione 'AddressOf' in '\<typename>' perché il tipo '\<typename>' è dichiarato come 'MustInherit' ed è impossibile crearlo
 Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che può essere solo una classe base e non può essere usato per creare un'istanza.  
   
  L'operatore `AddressOf` crea un'istanza di delegato di routine che fa riferimento a una routine specifica.  
@@ -27,6 +27,6 @@ Un'istruzione tenta di convertire un'espressione `AddressOf` in un tipo che può
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatore AddressOf](../../visual-basic/language-reference/operators/addressof-operator.md)
+- [Operatore AddressOf](../language-reference/operators/addressof-operator.md)
 
-- [Delegati](../../visual-basic/programming-guide/language-features/delegates/index.md)
+- [Delegati](../programming-guide/language-features/delegates/index.md)
