--- a/docs/visual-basic/misc/bc31134.md
+++ b/docs/visual-basic/misc/bc31134.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31134
 ms.assetid: 942f0b91-e71a-499a-ad10-a5dfcb4e72b1
-ms.openlocfilehash: 7747bd64ff8642fab36887b276b93e7cc455dd88
-ms.sourcegitcommit: cdf67135a98a5a51913dacddb58e004a3c867802
+ms.openlocfilehash: 5a90a9fff3cd5ba3f2800b8c2c33759a862ac33d
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 08/21/2019
-ms.locfileid: "69664565"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84414725"
 ---
 # <a name="addhandler-and-removehandler-method-parameters-cannot-be-declared-byref"></a>I parametri dei metodi 'AddHandler' e 'RemoveHandler' non possono essere dichiarati come 'ByRef'
 I parametri dei metodi `AddHandler` e `RemoveHandler` non possono essere dichiarati con il modificatore `ByRef` .  
@@ -25,8 +25,8 @@ I parametri dei metodi `AddHandler` e `RemoveHandler` non possono essere dichiar
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Event](../../visual-basic/language-reference/statements/event-statement.md)
+- [Istruzione Event](../language-reference/statements/event-statement.md)
 - [Istruzione AddHandler](../language-reference/statements/addhandler-statement.md)
 - [RemoveHandler (istruzione)](../language-reference/statements/removehandler-statement.md)
-- [ByRef](../../visual-basic/language-reference/modifiers/byref.md)
-- [Eventi](../../visual-basic/programming-guide/language-features/events/index.md)
+- [ByRef](../language-reference/modifiers/byref.md)
+- [Events](../programming-guide/language-features/events/index.md)
