--- a/docs/visual-basic/misc/bc32013.md
+++ b/docs/visual-basic/misc/bc32013.md
@@ -1,5 +1,5 @@
 ---
-title: Option Strict On non ammette operandi di tipo Object per l'operatore '<operatorname>'
+title: Option Strict On non consente operandi di tipo Object per l'operatore ' <operatorname> '
 ms.date: 07/20/2015
 f1_keywords:
 - bc32013
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32013
 ms.assetid: cd197da8-2676-453b-884b-3231fb6f909d
-ms.openlocfilehash: 7a6a6964aed878e0264f47a513106f237c660683
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 20a9de39eabf81547ac3b31f9d81cc7a25e01425
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61833417"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413934"
 ---
-# <a name="option-strict-on-disallows-operands-of-type-object-for-operator-operatorname"></a>Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoperatore >'
-Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoperatore >'. Usare l'operatore Is per verificare l'identità dell'oggetto.  
+# <a name="option-strict-on-disallows-operands-of-type-object-for-operator-operatorname"></a>Option Strict On non consente operandi di tipo Object per l'operatore ' \<operatorname> '
+Option Strict On non consente operandi di tipo Object per l'operatore ' \<operatorname> '. Usare l'operatore Is per verificare l'identità dell'oggetto.  
   
  Un operatore di confronto aritmetico, ad esempio `=` , viene usato con una o più variabili oggetto quando `Option Strict` è `On`.  
   
@@ -29,6 +29,6 @@ Option Strict On non ammette operandi di tipo Object per l'operatore '\<nomeoper
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Operatori di confronto](../../visual-basic/language-reference/operators/comparison-operators.md)
-- [Operatore Is](../../visual-basic/language-reference/operators/is-operator.md)
-- [Istruzione Option Strict](../../visual-basic/language-reference/statements/option-strict-statement.md)
+- [Operatori di confronto](../language-reference/operators/comparison-operators.md)
+- [Operatore Is](../language-reference/operators/is-operator.md)
+- [Option Strict Statement](../language-reference/statements/option-strict-statement.md)
