--- a/docs/visual-basic/misc/bc32071.md
+++ b/docs/visual-basic/misc/bc32071.md
@@ -1,5 +1,5 @@
 ---
-title: Il tipo di vincolo '<typename>' già specificato per questo parametro di tipo
+title: Tipo di vincolo '<typename>' già specificato per questo parametro di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - BC32071
@@ -7,14 +7,14 @@ f1_keywords:
 helpviewer_keywords:
 - BC32071
 ms.assetid: 6b0e85e9-3ac8-4181-97de-ca690b95a63c
-ms.openlocfilehash: 058fb541ddb1c8157b0eeb3f08f676116c5eaa95
-ms.sourcegitcommit: e08b319358a8025cc6aa38737854f7bdb87183d6
+ms.openlocfilehash: f0747575f911475e14b72b8bfc116668dbb198ef
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/29/2019
-ms.locfileid: "64913316"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413804"
 ---
-# <a name="constraint-type-typename-already-specified-for-this-type-parameter"></a>Il tipo di vincolo '\<nomeTipo >' già specificato per questo parametro di tipo
+# <a name="constraint-type-typename-already-specified-for-this-type-parameter"></a>Tipo di vincolo '\<typename>' già specificato per questo parametro di tipo
 Un elenco di vincoli include più volte un vincolo di classe o interfaccia.  
   
  Un elenco di vincoli impone requisiti per l'argomento di tipo passato al parametro di tipo. Si possono specificare i requisiti seguenti in qualsiasi combinazione:  
@@ -33,5 +33,5 @@ Un elenco di vincoli include più volte un vincolo di classe o interfaccia.
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
