--- a/docs/visual-basic/misc/bc32074.md
+++ b/docs/visual-basic/misc/bc32074.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32074
 ms.assetid: 3552ac98-d86a-4962-9d51-b9a8acc38ea1
-ms.openlocfilehash: bd13757cb9fb19f1f728f40114c8e5b288936bd2
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 5aea76a6079eeede54d9889b2e213c0c667b1cf6
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64754574"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413739"
 ---
 # <a name="classes-that-are-generic-or-contained-in-a-generic-type-cannot-inherit-from-an-attribute-class"></a>Le classi generiche o che sono contenute in un tipo generico non possono ereditare da una classe Attribute
 
@@ -43,6 +43,6 @@ Visual Basic e .NET Framework non supportano alcuna combinazione di attributi e 
 ## <a name="see-also"></a>Vedere anche
 
 - <xref:System.Attribute>
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Nozioni fondamentali sull'ereditarietà](../../visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md)
-- [Istruzione Inherits](../../visual-basic/language-reference/statements/inherits-statement.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Nozioni fondamentali sull'ereditarietà](../programming-guide/language-features/objects-and-classes/inheritance-basics.md)
+- [Inherits Statement](../language-reference/statements/inherits-statement.md)
