--- a/docs/visual-basic/misc/bc32075.md
+++ b/docs/visual-basic/misc/bc32075.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32075
 ms.assetid: c620b67e-70f8-42ac-8292-e9ea484904c3
-ms.openlocfilehash: 7b2f2661ee2e34b567fc16ac1bad4528e3523f59
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a9bab4314088d560653439d9b606dfb152c8d05b
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618722"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413765"
 ---
 # <a name="declare-statements-are-not-allowed-in-generic-types-or-types-contained-in-generic-types"></a>Le istruzioni 'Declare' non sono consentite in tipi generici o in tipi contenuti in tipi generici
 Un'istruzione `Declare` è inclusa nell'ambito di una classe o struttura generica oppure di una classe o struttura dichiarata all'interno di una classe o struttura generica.  
@@ -27,5 +27,5 @@ Un'istruzione `Declare` è inclusa nell'ambito di una classe o struttura generic
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Istruzione Declare](../../visual-basic/language-reference/statements/declare-statement.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+- [Declare Statement](../language-reference/statements/declare-statement.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
