--- a/docs/visual-basic/misc/bc32087.md
+++ b/docs/visual-basic/misc/bc32087.md
@@ -1,5 +1,5 @@
 ---
-title: Non è riuscita perché la risoluzione dell'overload non accessibile '<genericprocedurename>' accetta questo numero di argomenti tipo
+title: Risoluzione dell'overload non riuscita perché nessun '<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo
 ms.date: 07/20/2015
 f1_keywords:
 - bc32087
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC32087
 ms.assetid: a3eaafd3-80f6-4b7d-9b75-47b043fe17b5
-ms.openlocfilehash: e134ce52e74b2a7ba24d7950b6827109a475a6e7
-ms.sourcegitcommit: 9b552addadfb57fab0b9e7852ed4f1f1b8a42f8e
+ms.openlocfilehash: 92f70bcf4be74e6d8f2b459c7416c5d072c3b5df
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/23/2019
-ms.locfileid: "61783773"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358802"
 ---
-# <a name="overload-resolution-failed-because-no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a>Non è riuscita perché la risoluzione dell'overload non accessibile '\<nomeroutinegenerica >' accetta questo numero di argomenti tipo
+# <a name="overload-resolution-failed-because-no-accessible-genericprocedurename-accepts-this-number-of-type-arguments"></a>Risoluzione dell'overload non riuscita perché nessun '\<genericprocedurename>' accessibile accetta questo numero di argomenti di tipo
 Una chiamata a una routine di overload generica non può essere risolta perché il compilatore non può accedere a nessuna versione di overload con il numero appropriato di parametri di tipo.  
   
- Quando si chiama una routine generica, è necessario fornire un argomento di tipo per ogni parametro di tipo. In alternativa, è possibile non fornire alcun argomento di tipo e permettere al compilatore di provare a eseguire l' *inferenza del tipo*. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md).  
+ Quando si chiama una routine generica, è necessario fornire un argomento di tipo per ogni parametro di tipo. In alternativa, è possibile non fornire alcun argomento di tipo e permettere al compilatore di provare a eseguire l' *inferenza del tipo*. Per altre informazioni, vedere "Inferenza di tipi" in [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md).  
   
  **ID errore:** BC32087  
   
 ## <a name="to-correct-this-error"></a>Per correggere l'errore  
   
-1. Verificare che la versione che si vuole chiamare sia accessibile dal codice chiamante. Vedere [Access levels in Visual Basic](../../visual-basic/programming-guide/language-features/declared-elements/access-levels.md).  
+1. Verificare che la versione che si vuole chiamare sia accessibile dal codice chiamante. Vedere [livelli di accesso in Visual Basic](../programming-guide/language-features/declared-elements/access-levels.md).  
   
 2. Aggiungere o rimuovere gli argomenti di tipo dal codice chiamante in modo che l'elenco di argomenti di tipo corrisponda all'elenco di parametri di tipo della versione che si intende chiamare.  
   
@@ -33,7 +33,7 @@ Una chiamata a una routine di overload generica non può essere risolta perché 
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Metodi e proprietà di overload](../../visual-basic/programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
-- [Risoluzione dell'overload](../../visual-basic/programming-guide/language-features/procedures/overload-resolution.md)
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Metodi e proprietà di overload](../programming-guide/language-features/objects-and-classes/overloaded-properties-and-methods.md)
+- [Risoluzione dell'overload](../programming-guide/language-features/procedures/overload-resolution.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Type List](../language-reference/statements/type-list.md)
