--- a/docs/visual-basic/misc/bc32088.md
+++ b/docs/visual-basic/misc/bc32088.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC32088
 ms.assetid: a0918e90-e7ad-4edc-81e1-584e6174bb6c
-ms.openlocfilehash: db58726973aae546f9b4d10516334173d3f4e43a
-ms.sourcegitcommit: da2dd2772fcf32b44eb18b1cbe8affd17b1753c9
+ms.openlocfilehash: 3e86015f607f4393770c068bfab37a662611ef29
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 09/27/2019
-ms.locfileid: "71352238"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84358724"
 ---
 # <a name="type-arguments-unexpected"></a>Argomenti di tipo imprevisti
 Una clausola `Implements` fornisce argomenti di tipo per il membro di interfaccia che sta implementando.  
@@ -48,8 +48,8 @@ Public Sub testSub(Of t)() Implements testInterface.testSub
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Implements](../../visual-basic/language-reference/statements/implements-clause.md)
+- [Implementazioni](../language-reference/statements/implements-clause.md)
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Generic Procedures in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-procedures.md)
-- [Elenco dei tipi](../../visual-basic/language-reference/statements/type-list.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Generic Procedures in Visual Basic](../programming-guide/language-features/data-types/generic-procedures.md)
+- [Type List](../language-reference/statements/type-list.md)
