--- a/docs/visual-basic/misc/bc32104.md
+++ b/docs/visual-basic/misc/bc32104.md
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC32104
 ms.assetid: f41a581b-afca-4173-bc82-b35ed49caba0
-ms.openlocfilehash: 4c9819d0164e048af4680a1e31eef6bd42e80fff
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: 4de7272579133f7ed194832a0668ea9ea798feaa
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64618396"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413674"
 ---
 # <a name="class-constraint-and-structure-constraint-cannot-be-combined"></a>Impossibile combinare il vincolo 'Class' e il vincolo 'Structure'
-Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../../visual-basic/language-reference/statements/class-statement.md) che il vincolo [Structure (Visual Basic)](../../visual-basic/language-reference/statements/structure-statement.md) .  
+Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../language-reference/statements/class-statement.md) che il vincolo [Structure (Visual Basic)](../language-reference/statements/structure-statement.md) .  
   
  Un elenco di vincoli in un parametro di tipo può specificare che l'argomento di tipo passato a tale parametro di tipo deve essere un tipo valore (con il vincolo `Structure` ) o un tipo riferimento (con il vincolo `Class` ). Non è possibile specificare entrambi i vincoli per lo stesso parametro di tipo e non è possibile specificare uno dei due vincoli più volte.  
   
@@ -31,5 +31,5 @@ Un elenco di vincoli include sia il vincolo [Class (Visual Basic)](../../visual-
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Generic Types in Visual Basic](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
-- [Value Types and Reference Types](../../visual-basic/programming-guide/language-features/data-types/value-types-and-reference-types.md)
+- [Generic Types in Visual Basic](../programming-guide/language-features/data-types/generic-types.md)
+- [Value Types and Reference Types](../programming-guide/language-features/data-types/value-types-and-reference-types.md)
