--- a/docs/visual-basic/misc/bc42206.md
+++ b/docs/visual-basic/misc/bc42206.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42206
 ms.assetid: 4e55fa8a-2927-43a4-b6b1-5ed8e8bd877f
-ms.openlocfilehash: 7e09ccb397e9009bb66e78227f2f18acd35343b0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: c0496b7433742cfa76f31cf60c337f6f2fb9c520
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64588078"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413583"
 ---
 # <a name="maximum-number-of-warnings-has-been-exceeded"></a>Superato il numero massimo di avvisi consentiti
 Il numero massimo di avvisi di compilazione consentiti è 100. Il compilatore impone questo limite per ridurre le dimensioni dei report di errore e avviso.  
@@ -27,5 +27,5 @@ Il numero massimo di avvisi di compilazione consentiti è 100. Il compilatore im
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Compilatore della riga di comando di Visual Basic](../../visual-basic/reference/command-line-compiler/index.md)
+- [Compilatore della riga di comando di Visual Basic](../reference/command-line-compiler/index.md)
 - [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)
