--- a/docs/visual-basic/misc/bc42305.md
+++ b/docs/visual-basic/misc/bc42305.md
@@ -1,5 +1,5 @@
 ---
-title: Tag del commento XML '<tag>' presente più volte con attributi identici nello stesso blocco di commento XML
+title: Il tag '<tag>' del commento XML è presente più volte con attributi identici nello stesso blocco di commento XML
 ms.date: 07/20/2015
 f1_keywords:
 - bc42305
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42305
 ms.assetid: 3707a863-149f-4ce8-858f-9d78e14ad5b6
-ms.openlocfilehash: 90262dc98fdaf174bee76dbdf29e69c4aff5d5a0
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: f18fba76cc5f74d5b2c27958b11797c4e76c2a36
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64587848"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413531"
 ---
-# <a name="xml-comment-tag-tag-appears-with-identical-attributes-more-than-once-in-the-same-xml-comment-block"></a>Tag del commento XML '\<tag >' presente più volte con attributi identici nello stesso blocco di commento XML
-Tag del commento XML \<tag > presente più volte con attributi identici nello stesso blocco di commento XML. Il commento XML verrà ignorato.  
+# <a name="xml-comment-tag-tag-appears-with-identical-attributes-more-than-once-in-the-same-xml-comment-block"></a>Il tag '\<tag>' del commento XML è presente più volte con attributi identici nello stesso blocco di commento XML
+Il tag del commento XML è \<tag> presente più volte con attributi identici nello stesso blocco di commento XML. Il commento XML verrà ignorato.  
   
  Il commento XML contiene più tag con attributi identici.  
   
@@ -27,5 +27,5 @@ Tag del commento XML \<tag > presente più volte con attributi identici nello st
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
