--- a/docs/visual-basic/misc/bc42306.md
+++ b/docs/visual-basic/misc/bc42306.md
@@ -1,5 +1,5 @@
 ---
-title: Tag del commento XML '<tag>' non è consentito in un '<element>' elemento di linguaggio
+title: Il tag del commento XML <tag> non è consentito in un elemento di linguaggio '<element>'
 ms.date: 07/20/2015
 f1_keywords:
 - vbc42306
@@ -7,15 +7,15 @@ f1_keywords:
 helpviewer_keywords:
 - BC42306
 ms.assetid: 12846822-0609-4298-a8b2-b022abfa3765
-ms.openlocfilehash: 9781b5adebea41fed5d9bbdbdca5951e6615ea5c
-ms.sourcegitcommit: 2701302a99cafbe0d86d53d540eb0fa7e9b46b36
+ms.openlocfilehash: a43de60aa1c088a3f09ec1d6a7e4d5e7d5f5067f
+ms.sourcegitcommit: f8c270376ed905f6a8896ce0fe25b4f4b38ff498
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/28/2019
-ms.locfileid: "64604358"
+ms.lasthandoff: 06/04/2020
+ms.locfileid: "84413518"
 ---
-# <a name="xml-comment-tag-tag-is-not-permitted-on-a-element-language-element"></a>Tag del commento XML '\<tag >' non è consentito in un '\<elemento >' elemento di linguaggio
-Tag del commento XML \<tag > non è consentito in un '\<elemento >' elemento. Il commento XML verrà ignorato.  
+# <a name="xml-comment-tag-tag-is-not-permitted-on-a-element-language-element"></a>Il tag del commento XML \<tag> non è consentito in un elemento di linguaggio '\<element>'
+Il tag del commento XML \<tag> non è consentito in un \<element> elemento ''. Il commento XML verrà ignorato.  
   
  Un tag di commento XML non è supportato dall'elemento di linguaggio al quale viene applicato.  
   
@@ -27,5 +27,5 @@ Tag del commento XML \<tag > non è consentito in un '\<elemento >' elemento. Il
   
 ## <a name="see-also"></a>Vedere anche
 
-- [Tag di commento XML](../../visual-basic/language-reference/xmldoc/index.md)
-- [Documentazione del codice tramite XML](../../visual-basic/programming-guide/program-structure/documenting-your-code-with-xml.md)
+- [Tag di commento XML](../language-reference/xmldoc/index.md)
+- [Documentazione del codice tramite XML](../programming-guide/program-structure/documenting-your-code-with-xml.md)
